# robot_anim_genesis2blender

./: README.md  bvh_creator.py  dofs.txt  humanoid.py  link2mesh.txt  robot.bvh
gltf_writer/: CMakeLists.txt  gltf_writer.h  main.cpp
gltf_writer/SimpleViewer/include/: opengl_viewer.h
gltf_writer/SimpleViewer/include/common/: general.h  mesh.cpp  mesh.h  transform.cpp  transform.h
gltf_writer/SimpleViewer/lib/: SimpleViewer_Release.lib
